--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ cache: pip
 
 install: "pip install sphinx sphinx_rtd_theme"
 script:
-  - sphinx-build -nWT docs/source/ docs/build/html/
+  - sphinx-build -nT docs/source/ docs/build/html/
 
