--- a/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
+++ b/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
@@ -38,14 +38,14 @@ Master:
   ServicePort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  ServiceType: ClusterIP
+  ServiceType: NodePort
   # Master Service annotations
   ServiceAnnotations: {}
   #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
   # Used to create Ingress record (should used with ServiceType: ClusterIP)
-   HostName: jenkins.cluster.local
+  HostName: jenkins.user21.web.service.consul
   # NodePort: <to set explicitly, choose port between 30000-32767
-  ContainerPort: 8080
+  # ContainerPort: 8080
   # Enable Kubernetes Liveness and Readiness Probes
   HealthProbes: true
   HealthProbesTimeout: 60
@@ -100,12 +100,12 @@ Master:
   Ingress:
     Annotations:
      kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+     kubernetes.io/tls-acme: "true"
 
     TLS:
-    # - secretName: jenkins.cluster.local
-    #   hosts:
-    #     - jenkins.cluster.local
+     - secretName: jenkins.cluster.local
+       hosts:
+         - jenkins.cluster.local
 
 Agent:
   Enabled: false
@@ -158,7 +158,7 @@ NetworkPolicy:
 
 ## Install Default RBAC roles and bindings
 rbac:
-  install: false
+  install: true
   serviceAccountName: default
   # RBAC api version (currently either v1beta1 or v1alpha1)
   apiVersion: v1beta1
