Revised whole document and add objectives, goal and flow.

--- a/docs/source/Level2/resources/sample-pvc.yaml
+++ b/docs/source/Level2/resources/sample-pvc.yaml
@@ -3,7 +3,7 @@ kind: PersistentVolumeClaim
 metadata:
   name: sample-pv-claim
   labels:
-    app: app_name
+    app: アプリケーション名
   annotations:
     trident.netapp.io/reclaimPolicy: "Retain"
     trident.netapp.io/exportPolicy: "default"
