--- a/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
+++ b/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
@@ -38,7 +38,7 @@ Master:
   ServicePort: 8080
   # For minikube, set this to NodePort, elsewhere use LoadBalancer
   # Use ClusterIP if your setup includes ingress controller
-  ServiceType: NodePort
+  ServiceType: ClusterIP
   # Master Service annotations
   ServiceAnnotations: {}
   #   service.beta.kubernetes.io/aws-load-balancer-backend-protocol: https
@@ -100,12 +100,12 @@ Master:
   Ingress:
     Annotations:
      kubernetes.io/ingress.class: nginx
-     kubernetes.io/tls-acme: "true"
+     kubernetes.io/tls-acme: "false"
 
     TLS:
-     - secretName: jenkins.cluster.local
-       hosts:
-         - jenkins.cluster.local
+#     - secretName: jenkins.cluster.local
+#       hosts:
+#         - jenkins.cluster.local
 
 Agent:
   Enabled: false
@@ -138,23 +138,23 @@ Persistence:
   ##
   StorageClass: "ontap-gold"
 
-  Annotations: { trident.netapp.io/exportPolicy: "default" }
+  Annotations: {trident.netapp.io/exportPolicy: "default"}
   AccessMode: ReadWriteOnce
   Size: 8Gi
-  volumes:
-    - name: jenkins-home
-      emptyDir: {}
-  mounts:
-    - mountPath: /var/jenkins_home
-      name: jenkins-home
-#      readOnly: true
+#  volumes:
+#    - name: jenkins-home
+#      persistentVolumeClaim:
+#        claimName: jenkins-home-pvc
+#  mounts:
+#    - name: jenkins-home
+#      mountPath: /var/jenkins_home
 
 NetworkPolicy:
   # Enable creation of NetworkPolicy resources.
   Enabled: false
   # For Kubernetes v1.4, v1.5 and v1.6, use 'extensions/v1beta1'
   # For Kubernetes v1.7, use 'networking.k8s.io/v1'
-  ApiVersion: networking.k8s.io/v1
+  ApiVersion: extensions/v1beta1
 
 ## Install Default RBAC roles and bindings
 rbac:
