--- a/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
+++ b/docs/source/Level3/resources/helm-values/jenkins-default-values-modified.yaml
@@ -45,7 +45,7 @@ Master:
   # Used to create Ingress record (should used with ServiceType: ClusterIP)
   HostName: jenkins.user21.web.service.consul
   # NodePort: <to set explicitly, choose port between 30000-32767
-  # ContainerPort: 8080
+  ContainerPort: 8080
   # Enable Kubernetes Liveness and Readiness Probes
   HealthProbes: true
   HealthProbesTimeout: 60
@@ -100,16 +100,24 @@ Master:
   Ingress:
     Annotations:
      kubernetes.io/ingress.class: nginx
-     kubernetes.io/tls-acme: "false"
+    # kubernetes.io/tls-acme: "true"
 
     TLS:
-#     - secretName: jenkins.cluster.local
-#       hosts:
-#         - jenkins.cluster.local
+    # - secretName: jenkins.cluster.local
+    #   hosts:
+    #     - jenkins.cluster.local
 
 Agent:
-  Enabled: false
- #AlwaysPullImage: false
+  Enabled: true
+  Image: jenkins/jnlp-slave
+  ImageTag: 3.10-1
+# ImagePullSecret: jenkins
+  Component: "jenkins-slave"
+  Privileged: false
+  Cpu: "200m"
+  Memory: "256Mi"
+  # You may want to change this to true while testing a new image
+  AlwaysPullImage: false
   # You can define the volumes that you want to mount for this container
   # Allowed types are: ConfigMap, EmptyDir, HostPath, Nfs, Pod, Secret
   # Configure the attributes as they appear in the corresponding Java class for that type
