Change community name: DTL to NDX.

--- a/docs/source/Level2/resources/sample-pvccloning.yaml
+++ b/docs/source/Level2/resources/sample-pvccloning.yaml
@@ -3,7 +3,7 @@ apiVersion: v1
 metadata:
   name: basicclone
   annotations:
-    trident.netapp.io/cloneFromPVC: database
+    trident.netapp.io/cloneFromPVC: database (<-ここにクローンしたい既存のPVC名(ボリューム名）を記述）
 spec:
   accessModes:
     - ReadWriteOnce
