--- a/docs/source/Level2/resources/sample-block-sf-silver-sc.yaml
+++ b/docs/source/Level2/resources/sample-block-sf-silver-sc.yaml
@@ -1,9 +1,9 @@
 apiVersion: storage.k8s.io/v1
 kind: StorageClass
 metadata:
-  name: solidfire-bronze
+  name: solidfire-silver
 provisioner: netapp.io/trident
 parameters:
   backendType: "solidfire-san"
-  IOPS: "1500"
+  IOPS: "4000"
   fsType: "ext4"
