Update trident version and apply retain policy behavior change.

--- a/docs/source/container/Level2/resources/sample-sc.yaml
+++ b/docs/source/container/Level2/resources/sample-sc.yaml
@@ -3,6 +3,7 @@ kind: StorageClass
 metadata:
   name: ontap-gold
 provisioner: netapp.io/trident
+reclaimPolicy: Retain
 parameters:
   backendType: "ontap-nas"
   media: "ssd"
